Actualizo diseño de lista en diseño.css

--- a/estilos/diseño_estilos.css
+++ b/estilos/diseño_estilos.css
@@ -9,3 +9,8 @@ p{
     margin: 5%;
     font-family: sans-serif;
 }
+ul{
+    background-color: lightblue;
+    border: solid black;
+    border-radius: 20%;
+}
